app/.kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: intership
  name: svc-intership
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: intership-main
  type: ClusterIP
